samples/_failures_safe/1761611452_504be3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79decf5e.c: In function ‘main’:
./samples/SAFE/__tmp_79decf5e.c:147:66: error: expected ‘)’ at end of input
  147 |     printf("Vector 1: (%.2f, %.2f, %.2f)\n", vec1.x, vec1.y, vec1
      |           ~                                                      ^
      |                                                                  )
./samples/SAFE/__tmp_79decf5e.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("Vector 1: (%.2f, %.2f, %.2f)\n", vec1.x, vec1.y, vec1
      |     ^~~~~~
